refactor: adjust sorted method in get all articles
